Complete example, with doc_type solved, and including similar candidate pool
